--- a/demo/src/pages/index.astro
+++ b/demo/src/pages/index.astro
@@ -2,6 +2,7 @@
 import { MyComponent } from "maps-withastro"
 import { Leaflet } from "maps-withastro"
 import { MapLibre } from "maps-withastro"
+import { Mapbox } from "maps-withastro"
 ---
 
 <html lang="en">
@@ -13,12 +14,13 @@ import { MapLibre } from "maps-withastro"
 		<title>Astro</title>
 	</head>
 	<body>
-		<h1>Astro</h1>
+		<h1>Demo of Astro component</h1>
 
 		<MyComponent prefix="hello world"/>
 
-		<h1>Astro</h1>
+		<h1>Maps with Astro</h1>
 
+		Leaflet with Astro, Raster tiles from OpenStreetMap
 		<Leaflet
 			container="leafletmap"
 			latitude="32.795595"
@@ -30,6 +32,7 @@ import { MapLibre } from "maps-withastro"
 
 		<hr/>
 
+		MapLibre with Astro, demo vector tiles
 		<MapLibre
 			container="maplibremap"
 			latitude="32.795595"
@@ -37,5 +40,16 @@ import { MapLibre } from "maps-withastro"
 			zoom="10"
 			mapstyle="https://demotiles.maplibre.org/style.json"
 		/>
+		<hr/>
+
+		Mapbox with Astro, Raster tiles
+		<Mapbox
+			container="mapboxmap"
+			latitude="32.795595"
+			longitude="-117.259191"
+			zoom="3"
+			mapstyle="https://roblabs.com/xyz-raster-sources/styles/naturalearthtiles.json"
+		/>
+
 	</body>
 </html>
