Update MapLibre & Mapbox for interactive demo

--- a/demo/src/pages/index.astro
+++ b/demo/src/pages/index.astro
@@ -39,6 +39,7 @@ import { MapKit } from "maps-withastro"
 			latitude="32.795595"
 			longitude="-117.259191"
 			zoom="10"
+			interactive="true"
 			mapstyle="https://demotiles.maplibre.org/style.json"
 		/>
 		<hr/>
@@ -49,6 +50,7 @@ import { MapKit } from "maps-withastro"
 			latitude="32.795595"
 			longitude="-117.259191"
 			zoom="3"
+			interactive="false"
 			mapstyle="https://roblabs.com/xyz-raster-sources/styles/naturalearthtiles.json"
 		/>
 
