Mapbox with Astro, now uses accessToken

--- a/demo/src/pages/index.astro
+++ b/demo/src/pages/index.astro
@@ -51,6 +51,7 @@ import { MapKit } from "maps-withastro"
 			longitude="-117.259191"
 			zoom="3"
 			interactive="false"
+			accesstoken="accesstoken"
 			mapstyle="https://roblabs.com/xyz-raster-sources/styles/naturalearthtiles.json"
 		/>
 
