--- a/demo/src/pages/index.astro
+++ b/demo/src/pages/index.astro
@@ -29,6 +29,7 @@ import { MapKit } from "maps-withastro"
 			zoom="10"
 			tileLayer="https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png"
 			attribution="&copy; <a href='https://www.openstreetmap.org/copyright'>OpenStreetMap</a> contributors"
+			containerstyle="width: 312px; height: 256px"
 		/>
 
 		<hr/>
@@ -41,6 +42,7 @@ import { MapKit } from "maps-withastro"
 			zoom="10"
 			interactive="true"
 			mapstyle="https://demotiles.maplibre.org/style.json"
+			containerstyle="width: 100vw; height: 256px"
 		/>
 		<hr/>
 
@@ -53,6 +55,7 @@ import { MapKit } from "maps-withastro"
 			interactive="false"
 			accesstoken="accesstoken"
 			mapstyle="https://roblabs.com/xyz-raster-sources/styles/naturalearthtiles.json"
+			containerstyle="width: 256px; height: 256px"
 		/>
 
 		<hr/>
@@ -63,7 +66,9 @@ import { MapKit } from "maps-withastro"
 			latitude="32.795595"
 			longitude="-117.259191"
 			cameradistance="55000"
-			interactive="false"		
+			interactive="false"
+			maptype="Hybrid"
+			containerstyle="width: 256px; height: 256px"
 		/>
 
 		<br>
@@ -73,7 +78,8 @@ import { MapKit } from "maps-withastro"
 			latitude="32.795595"
 			longitude="-117.259191"
 			cameradistance="55000"
-			interactive="true"			
+			interactive="true"
+			maptype="MutedStandard"
 		/>
 	</body>
 </html>
