MapKit with Astro:  Pass in JSON Web Token as either a URL or string.  Serve your own sample JWT.

--- a/src/MapLibre.astro
+++ b/src/MapLibre.astro
@@ -23,6 +23,7 @@ const { latitude, longitude, zoom, mapstyle, container, interactive, containerst
   data-mapstyle={mapstyle}
   data-container={container}
   data-interactive={interactive}
+  data-containerstyle={containerstyle}
 >
 <div id={container} style={containerstyle}></div>
 <script>
