--- a/src/MapKit.astro
+++ b/src/MapKit.astro
@@ -38,6 +38,9 @@ export interface Props {
 
   /** Undocumented MapKit JS feature */
   showstileinfo?: boolean
+
+  /** a signed JSON Web Token (JWT) to authenticate map initializations. See: https://developer.apple.com/documentation/mapkitjs/creating_and_using_tokens_with_mapkit_js */
+  jwt: string
 }
 
 const { 
@@ -49,7 +52,8 @@ const {
   maptype = "Standard",
   containerstyle = "height: 61.8vh",
   urltemplate = "",
-  showstileinfo = false
+  showstileinfo = false,
+  jwt
 } = Astro.props
 
 ---
@@ -65,6 +69,7 @@ const {
   data-containerstyle={containerstyle}
   data-urltemplate={urltemplate}
   data-showstileinfo={showstileinfo}
+  data-jwt={jwt}
 >
 <div id={container} style={containerstyle}></div>
 
@@ -76,15 +81,17 @@ const {
   class MapKitMap extends HTMLElement {
     constructor() {
       super()
+      const jwt = this.dataset.jwt
 
       mapkit.init({
             authorizationCallback: function(done) {
-                var xhr = new XMLHttpRequest();
-                xhr.open("GET", "https://roblabs.com/services/jwt");
-                xhr.addEventListener("load", function() {
-                    done(this.responseText);
-                });
-                xhr.send();
+              if(jwt.toLowerCase().startsWith("http")) {
+                fetch(jwt)
+                    .then(res => res.text())
+                    .then(done);
+              } else {
+                done(jwt)
+              }
             }
         });
 
