Upgrade dependencies:  MapLibre, Astro, Leaflet

--- a/demo/src/pages/index.astro
+++ b/demo/src/pages/index.astro
@@ -46,7 +46,7 @@ import { Mapbox } from "maps-withastro"
 		/>
 		<hr/>
 
-		Mapbox with Astro, Raster tiles
+		Mapbox with Astro, Raster tiles with <pre>interactive="false"</pre>
 		<Mapbox
 			container="mapboxmap"
 			latitude="32.795595"
