--- a/src/MapKit.astro
+++ b/src/MapKit.astro
@@ -200,5 +200,5 @@ const {
     }
   }
 
-  customElements.define("mapkit-map", MapKitMap);
+  window.customElements.define("mapkit-map", MapKitMap);
 </script>
