--- a/src/MapKit.astro
+++ b/src/MapKit.astro
@@ -115,10 +115,7 @@ const {
                   console.log(`import.meta.env.DEV == ${import.meta.env.DEV}: 🟡 Using a local JWT signed for local MapKit testing, localhost_3141.jwt`)
                 }
 
-                if(import.meta.env.PROD) {
-                  console.log(`import.meta.env.PROD == ${import.meta.env.PROD}: Passed in JWT, ${jwt}`)
-                }
-
+                // Fetch JWT from the passed in server
                 fetch(jwt)
                     .then(res => res.text())
                     .then(done);
